Added new module web

--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,11 @@ plugins {
 	id 'java'
 }
 
-group = 'ro.puiamarinel'
-version = '0.0.1-SNAPSHOT'
+allprojects {
+	group = 'ro.puiamarinel'
+	version = '1.0.0-SNAPSHOT'
+}
+
 sourceCompatibility = '11'
 
 configurations {
