--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,19 +1,3 @@
-plugins {
-    id 'java'
-}
-
-group 'ro.puiamarinel'
-version '0.0.1-SNAPSHOT'
-
-repositories {
-    mavenCentral()
-}
-
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
-}
-
-test {
-    useJUnitPlatform()
+    implementation ('org.springframework.boot:spring-boot-starter')
 }
