--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '2.6.2'
+		springBootVersion = '2.6.2' as Object
 	}
 
 	repositories {
@@ -25,12 +25,6 @@ subprojects {
 	apply plugin: 'io.spring.dependency-management'
 
 	sourceCompatibility = '11'
-
-	configurations {
-		compileOnly {
-			extendsFrom annotationProcessor
-		}
-	}
 
 	repositories {
 		mavenCentral()
