--- a/web/build.gradle
+++ b/web/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'org.springframework.boot'
 
 dependencies {
-    compileClasspath(project(':core'))
+    implementation(project(':core'))
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation ('org.springframework.boot:spring-boot-starter-web')
-
 }
