--- a/web/build.gradle
+++ b/web/build.gradle
@@ -2,6 +2,6 @@ apply plugin: 'org.springframework.boot'
 
 dependencies {
     implementation(project(':core'))
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation ('org.springframework.boot:spring-boot-starter-thymeleaf')
     implementation ('org.springframework.boot:spring-boot-starter-web')
 }
