Missing some closure configuration

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,12 @@ subprojects {
 
 	sourceCompatibility = '11'
 
+	configurations {
+		compileOnly {
+			extendsFrom annotationProcessor
+		}
+	}
+
 	repositories {
 		mavenCentral()
 	}
